syntax = "proto3";

package protobuf;

// protoc -I proto ./auth/sso/protobuf/user.proto --go_out=./auth/sso/protobuf/services/ --go_opt=paths=source_relative --go-grpc_out=./auth/sso/protobuf/services/

option go_package = "./services";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
}

message RegisterRequest {
  string email = 1; // Email of the user to register.
  string password = 2; // Password of the user to register.
}

message RegisterResponse {
  int64 user_id = 1; // User ID of the registered user.
}

message LoginRequest {
  string email = 1; // Email of the user to register.
  string password = 2; // Password of the user to register.
  int32 app_id = 3; // ID of the app to login to.
}

message LoginResponse {
  uint64 token = 1; // Auth token of the logged in user.
}

message IsAdminRequest {
  int64 user_id = 1; // User ID to validate.
}

message IsAdminResponse {
  bool is_admin = 1; // Indicates whether the user is an admin.
}
